# SFML-Test

./: CMakeLists.txt  README.md  main.cpp
game/: Circle.cpp  Circle.h  Game.cpp  Game.h
util/: Vec2.cpp  Vec2.h
